[gd_scene load_steps=60 format=2]

[ext_resource path="res://Stages/Game.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/backgroundbrick/tiles.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/backgroundbrick/Adsiz.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Grids/select.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/Grids/selected.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile3.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile7.png" type="Texture" id=9]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile11.png" type="Texture" id=10]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile14.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile15.png" type="Texture" id=12]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile16.png" type="Texture" id=13]
[ext_resource path="res://Resources/Sprites/GraveyardTileSet/png/Tiles/Tile5.png" type="Texture" id=14]
[ext_resource path="res://Stages/TileMap.gd" type="Script" id=15]
[ext_resource path="res://Resources/Sprites/UISprites/NormalButton.png" type="Texture" id=16]
[ext_resource path="res://Resources/Sprites/UISprites/PressedButton.png" type="Texture" id=17]
[ext_resource path="res://Resources/Sprites/UISprites/LockButton.png" type="Texture" id=18]
[ext_resource path="res://Resources/Fonts/Arial/arial.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Resources/Sprites/UISprites/Window2s.png" type="Texture" id=20]
[ext_resource path="res://Resources/Sprites/UISprites/Windows.png" type="Texture" id=21]
[ext_resource path="res://Resources/Sprites/starcoinrotate1.png" type="Texture" id=22]
[ext_resource path="res://Stages/CoinCounter.gd" type="Script" id=23]
[ext_resource path="res://Resources/Sprites/UISprites/squaremarket.png" type="Texture" id=24]
[ext_resource path="res://Resources/Sprites/UISprites/squarebuttoncancel.png" type="Texture" id=25]
[ext_resource path="res://Resources/Sprites/UISprites/squarebuttondisable.png" type="Texture" id=26]
[ext_resource path="res://Resources/Sprites/BackgroundSea/2248.jpg" type="Texture" id=27]
[ext_resource path="res://Resources/AudioFiles/Game/savymerchant.ogg" type="AudioStream" id=28]
[ext_resource path="res://Resources/Sprites/BeachTileset/beach.png" type="Texture" id=30]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 63, 0, 63 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 64, 0, 0, 0, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 128, 0, 128, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 128, 0, 128, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 128, 0, 128, 96, 0, 96 )

[sub_resource type="TileSet" id=11]
0/name = "Tile1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tile2.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tile3.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tile7.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tile11.png 4"
4/texture = ExtResource( 10 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tile14.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 128, 96 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tile15.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 96 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Tile16.png 7"
7/texture = ExtResource( 13 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 96 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tile5.png 8"
8/texture = ExtResource( 14 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
11/name = "tiles.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 168, 324, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 3 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "tiles.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 282, 416, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 4 )
12/shape_one_way = true
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "Adsız.png 13"
13/texture = ExtResource( 5 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "select.png 14"
14/texture = ExtResource( 6 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 63, 63 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "selected.png 15"
15/texture = ExtResource( 7 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 64, 65 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "beach.png 16"
16/texture = ExtResource( 30 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 192, 192 )
16/tile_mode = 1
16/autotile/bitmask_mode = 0
16/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
16/autotile/icon_coordinate = Vector2( 0, 0 )
16/autotile/tile_size = Vector2( 64, 64 )
16/autotile/spacing = 0
16/autotile/occluder_map = [  ]
16/autotile/navpoly_map = [  ]
16/autotile/priority_map = [  ]
16/autotile/z_index_map = [  ]
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape = SubResource( 21 )
16/shape_one_way = false
16/shape_one_way_margin = 1.0
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0

[sub_resource type="DynamicFont" id=12]
size = 85
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=13]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 1894.66, 910.469, 119.713, 129.236 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 499, 1782, 535, 152 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 4532, 3384, 336, 53 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 1997, 1796, 336, 53 )

[sub_resource type="ParticlesMaterial" id=18]
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 2000, 1, 1 )
flag_disable_z = true
gravity = Vector3( 30, 50, 0 )
angular_velocity = 1.87276e-26
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_random = 0.32

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 1625.25, 1375.16, 343.527, 143.802 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( -23, 16, 2281, 2410 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -25.4308, 102.134 )
tile_set = SubResource( 11 )
collision_use_kinematic = true
collision_friction = 0.0
collision_bounce = 1.0
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 1048576, 16, 0, 1048577, 16, 1, 1048578, 16, 1, 1048579, 16, 1, 1048580, 16, 1, 1048581, 16, 1, 1048582, 16, 1, 1048583, 16, 1, 1048584, 16, 1, 1048585, 16, 1, 1048586, 16, 1, 1048587, 16, 1, 1048588, 16, 1, 1048589, 16, 1, 1048590, 16, 1, 1048591, 16, 1, 1048592, 16, 1, 1048593, 16, 1, 1048594, 16, 1, 1048595, 16, 1, 1048596, 16, 1, 1048597, 16, 1, 1048598, 16, 1, 1048599, 16, 1, 1048600, 16, 1, 1048601, 16, 1, 1048602, 16, 1, 1048603, 16, 1, 1048604, 16, 1, 1048605, 16, 1, 1048606, 16, 1, 1048607, 16, 1, 1048608, 16, 1, 1048609, 16, 1, 1048610, 16, 1, 1048611, 16, 1, 1048612, 16, 1, 1048613, 16, 1, 1048614, 16, 2, 1114112, 16, 65536, 1114113, 16, 65537, 1114114, 16, 65537, 1114115, 16, 65537, 1114116, 16, 65537, 1114117, 16, 65537, 1114118, 16, 65537, 1114119, 16, 65537, 1114120, 16, 65537, 1114121, 16, 65537, 1114122, 16, 65537, 1114123, 16, 65537, 1114124, 16, 65537, 1114125, 16, 65537, 1114126, 16, 65537, 1114127, 16, 65537, 1114128, 16, 65537, 1114129, 16, 65537, 1114130, 16, 65537, 1114131, 16, 65537, 1114132, 16, 65537, 1114133, 16, 65537, 1114134, 16, 65537, 1114135, 16, 65537, 1114136, 16, 65537, 1114137, 16, 65537, 1114138, 16, 65537, 1114139, 16, 65537, 1114140, 16, 65537, 1114141, 16, 65537, 1114142, 16, 65537, 1114143, 16, 65537, 1114144, 16, 65537, 1114145, 16, 65537, 1114146, 16, 65537, 1114147, 16, 65537, 1114148, 16, 65537, 1114149, 16, 65537, 1114150, 16, 65538, 1179648, 16, 131072, 1179649, 16, 131073, 1179650, 16, 131073, 1179651, 16, 131073, 1179652, 16, 131073, 1179653, 16, 131073, 1179654, 16, 131073, 1179655, 16, 131073, 1179656, 16, 131073, 1179657, 16, 131073, 1179658, 16, 131073, 1179659, 16, 131073, 1179660, 16, 131073, 1179661, 16, 131073, 1179662, 16, 131073, 1179663, 16, 131073, 1179664, 16, 131073, 1179665, 16, 131073, 1179666, 16, 131073, 1179667, 16, 131073, 1179668, 16, 131073, 1179669, 16, 131073, 1179670, 16, 131073, 1179671, 16, 131073, 1179672, 16, 131073, 1179673, 16, 131073, 1179674, 16, 131073, 1179675, 16, 131073, 1179676, 16, 131073, 1179677, 16, 131073, 1179678, 16, 131073, 1179679, 16, 131073, 1179680, 16, 131073, 1179681, 16, 131073, 1179682, 16, 131073, 1179683, 16, 131073, 1179684, 16, 131073, 1179685, 16, 131073, 1179686, 16, 131074, 1572862, 19, 0 )
script = ExtResource( 15 )

[node name="Game_UI" type="CanvasLayer" parent="."]

[node name="accept_button" type="TextureButton" parent="Game_UI"]
margin_left = 465.0
margin_top = 630.0
margin_right = 889.0
margin_bottom = 870.0
rect_scale = Vector2( 0.616032, 0.280316 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="Game_UI/accept_button"]
margin_left = 70.671
margin_top = 34.0542
margin_right = 354.672
margin_bottom = 119.054
rect_scale = Vector2( 0.85465, 1.43414 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ACCEPT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectPositionLabel" type="Label" parent="Game_UI"]
margin_left = 384.044
margin_top = 142.506
margin_right = 592.044
margin_bottom = 195.506
rect_scale = Vector2( 2.01716, 2.7042 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.988235, 1, 0.956863, 1 )
text = "SELECT POSITION
"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletIcon" type="TextureRect" parent="Game_UI"]
margin_left = 294.188
margin_top = 36.5146
margin_right = 766.188
margin_bottom = 187.514
rect_scale = Vector2( 0.190372, 0.192707 )
texture = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Background" type="TextureRect" parent="Game_UI"]
margin_left = 110.914
margin_top = 23.5933
margin_right = 616.914
margin_bottom = 143.593
rect_scale = Vector2( 0.34317, 0.341894 )
texture = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Health_Back" type="TextureProgress" parent="Game_UI"]
modulate = Color( 0.364706, 0, 0, 1 )
margin_left = 150.41
margin_top = 39.2454
margin_right = 275.41
margin_bottom = 99.2454
rect_scale = Vector2( 1.01, 0.4 )
value = 100.0
rounded = true
texture_progress = SubResource( 16 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Health" type="TextureProgress" parent="Game_UI"]
margin_left = 149.992
margin_top = 39.245
margin_right = 274.992
margin_bottom = 99.2452
rect_scale = Vector2( 1.01, 0.4 )
value = 100.0
rounded = true
texture_progress = SubResource( 17 )
tint_progress = Color( 0, 1, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Updated_Tween" type="Tween" parent="Game_UI"]
repeat = true
playback/repeat = true

[node name="level_text" type="RichTextLabel" parent="Game_UI"]
margin_left = 502.0
margin_top = 34.0
margin_right = 755.35
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 13 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "LEVEL :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_counter" type="RichTextLabel" parent="Game_UI/level_text"]
margin_left = 117.723
margin_top = 1.47899
margin_right = 253.723
margin_bottom = 41.479
custom_fonts/normal_font = SubResource( 13 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bullet_counter" type="RichTextLabel" parent="Game_UI"]
margin_left = 328.0
margin_top = 34.0
margin_right = 444.0
margin_bottom = 74.0
rect_scale = Vector2( 0.932722, 1.32486 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = SubResource( 13 )
custom_constants/table_vseparation = 4
bbcode_text = "30

"
visible_characters = 2
meta_underlined = false
tab_size = 1
text = "30

"
scroll_active = false

[node name="Snowing" type="Particles2D" parent="Game_UI"]
position = Vector2( 403.427, -16.4655 )
scale = Vector2( 2, 2 )
emitting = false
amount = 5000
lifetime = 5.0
preprocess = 5.0
speed_scale = 2.0
randomness = 0.5
local_coords = false
process_material = SubResource( 18 )

[node name="CoinIcon" type="TextureRect" parent="Game_UI"]
margin_left = 979.067
margin_top = 21.3461
margin_right = 1129.07
margin_bottom = 71.3461
rect_scale = Vector2( 1.03412, 1.21914 )
texture = SubResource( 19 )
expand = true

[node name="CoinIcon2" type="TextureRect" parent="Game_UI/CoinIcon"]
margin_left = 102.35
margin_top = 1.60752
margin_right = 135.35
margin_bottom = 33.6075
rect_scale = Vector2( 1.38517, 1.18225 )
texture = SubResource( 20 )
expand = true

[node name="Coin_Counter" type="RichTextLabel" parent="Game_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 418.0
margin_top = -367.0
margin_right = 494.0
margin_bottom = -317.0
rect_scale = Vector2( 0.933228, 1.00751 )
custom_fonts/normal_font = SubResource( 13 )
custom_colors/default_color = Color( 0.901961, 0.992157, 0.00784314, 1 )
bbcode_text = "0"
text = "0"
scroll_active = false
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Market_Button" type="TextureButton" parent="Game_UI"]
margin_left = 22.0
margin_top = 19.0
margin_right = 534.0
margin_bottom = 531.0
rect_scale = Vector2( 0.299559, 0.292191 )
toggle_mode = true
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_disabled = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownTimer" type="RichTextLabel" parent="Game_UI"]
margin_left = 767.0
margin_top = 34.0
margin_right = 975.0
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 13 )
text = "TIME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="RichTextLabel" parent="Game_UI/CountDownTimer"]
margin_left = 76.0
margin_right = 194.0
margin_bottom = 29.0
custom_fonts/normal_font = SubResource( 13 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 854.57, 750 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stage1Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -31.424
autoplay = true

[node name="GameAreaCam" type="Camera2D" parent="."]
position = Vector2( 1203.94, 631.641 )
scale = Vector2( -324.135, -89.984 )
zoom = Vector2( 1.862, 1.512 )

[node name="1gamebackground" type="Sprite" parent="."]
position = Vector2( 1227.27, 584.401 )
scale = Vector2( 0.381795, 0.415384 )
z_index = -500
texture = ExtResource( 27 )
[connection signal="pressed" from="Game_UI/accept_button" to="." method="_on_acceptbutton_pressed"]
[connection signal="pressed" from="Game_UI/Market_Button" to="." method="_on_TouchScreenButton_pressed"]
